unpackaged/main/default/objects/Asset/fields/Cons_Contract_Price__c.field-meta.xml
<CustomField>
    <fullName>Cons_Contract_Price__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Price</label>
    <type>Checkbox</type>
</CustomField>